# renderer-application

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg.json
.github/workflows/: cmake-build.yml
Profiles/: WinDbg
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt
Source/Application/Modules/Private/: AppDebugger.cppm  AppRadeonProfiler.cppm  AppScenePanel.cppm  AppStatusPanel.cppm  AppViewport.cppm  AppWindow.cppm  Main.cpp  ScenePanel.cppm  StatusPanel.cppm  Window.cppm
Source/Application/Modules/Public/: AppDebugger.ixx  AppScenePanel.ixx  AppStatusPanel.ixx  AppViewport.ixx  AppWindow.ixx  ScenePanel.ixx  StatusPanel.ixx  Window.ixx
Source/Application/Source/Private/: AppDebugger.cxx  AppRadeonProfiler.cxx  AppScenePanel.cxx  AppStatusPanel.cxx  AppViewport.cxx  AppWindow.cxx  Main.cpp
Source/Application/Source/Public/: AppDebugger.ixx  AppRadeonProfiler.ixx  AppScenePanel.ixx  AppStatusPanel.ixx  AppViewport.ixx  AppWindow.ixx
Source/UserInterface/: CMakeLists.txt
Source/UserInterface/Source/Private/: AppLibrary.cxx  AppRadeonProfiler.cxx  AppScenePanel.cxx  AppStatusPanel.cxx  AppViewport.cxx  AppWindow.cxx
Source/UserInterface/Source/Public/: AppLibrary.ixx  AppRadeonProfiler.ixx  AppScenePanel.ixx  AppStatusPanel.ixx  AppViewport.ixx  AppWindow.ixx  UserInterfaceModule.hpp
